--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Best of Luck</title>
+
     <style>
         /* General Reset */
         body {
@@ -12,11 +13,53 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            background:  linear-gradient(135deg, pink, #78bbd7 100%);
+            background: linear-gradient(135deg, pink, #78bbd7 100%);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            overflow: hidden;
         }
 
-        /* The Card Container */
+        /* 🌹 Floating Roses (UPGRADED) */
+        .roses {
+            position: fixed;
+            inset: 0;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        .roses span {
+            position: absolute;
+            bottom: -60px;
+            font-size: 28px;
+            animation: roseFloat 10s linear infinite;
+            opacity: 0.9;
+            filter: drop-shadow(0 0 8px rgba(255, 105, 180, 0.6));
+        }
+
+        .roses span:nth-child(1) { left: 10%; animation-delay: 0s; }
+        .roses span:nth-child(2) { left: 25%; animation-delay: 2s; font-size: 32px; }
+        .roses span:nth-child(3) { left: 40%; animation-delay: 4s; }
+        .roses span:nth-child(4) { left: 55%; animation-delay: 1s; font-size: 30px; }
+        .roses span:nth-child(5) { left: 70%; animation-delay: 3s; }
+        .roses span:nth-child(6) { left: 85%; animation-delay: 5s; font-size: 34px; }
+
+        @keyframes roseFloat {
+            0% {
+                transform: translateY(0) translateX(0) rotate(0deg) scale(0.8);
+                opacity: 0;
+            }
+            20% {
+                opacity: 1;
+            }
+            50% {
+                transform: translateY(-60vh) translateX(20px) rotate(180deg) scale(1.1);
+            }
+            100% {
+                transform: translateY(-120vh) translateX(-20px) rotate(360deg) scale(0.9);
+                opacity: 0;
+            }
+        }
+
+        /* Card */
         .wish-card {
             position: relative;
             cursor: pointer;
@@ -25,63 +68,65 @@
             box-shadow: 0 15px 35px rgba(0,0,0,0.15);
             background: rgb(12, 12, 12);
             transition: transform 0.3s ease;
+            z-index: 2;
         }
 
         .wish-card:hover {
             transform: scale(1.02);
         }
 
-        /* --- MEDIA QUERIES (Phone vs Laptop) --- */
-
-        /* LAPTOP STYLE (Screens wider than 768px) */
+        /* Laptop */
         @media (min-width: 769px) {
             .wish-card {
                 width: 350px;
                 height: 500px;
             }
-            .instruction-text::after { content: "Click to reveal your surprise"; }
+            .instruction-text::after {
+                content: "Click to reveal your surprise";
+            }
         }
 
-        /* PHONE STYLE (Screens smaller than 768px) */
+        /* Phone */
         @media (max-width: 768px) {
             .wish-card {
-                width: 85vw; /* 85% of screen width */
-                height: 60vh; /* 60% of screen height */
+                width: 85vw;
+                height: 60vh;
             }
-            .instruction-text::after { content: "Tap to reveal your surprise"; }
+            .instruction-text::after {
+                content: "Tap to reveal your surprise";
+            }
         }
 
-        /* The Wish Content (Bottom Layer) */
+        /* Wish Content */
         .wish-content {
             position: absolute;
-            inset: 0; /* fills the whole card */
+            inset: 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
             padding: 30px;
-            background: #000608 ;
+            background: #000608;
         }
 
         .wish-content h2 {
-            color:rgb(65, 176, 236);
+            color: rgb(65, 176, 236);
             font-size: 1.8rem;
             margin-bottom: 10px;
-            /* Floating Animation */
             animation: float 2.5s ease-in-out infinite;
         }
 
         .wish-content p {
-            color:rgb(192, 240, 255);
+            color: rgb(192, 240, 255);
             line-height: 1.5;
         }
 
-        /* The Photo Overlay (Top Layer) */
+        /* Photo Overlay */
         .photo-overlay {
             position: absolute;
             inset: 0;
-            z-index: 2;
+            z-index: 3;
             transition: transform 1s cubic-bezier(0.65, 0, 0.35, 1), opacity 0.8s;
         }
 
@@ -91,7 +136,6 @@
             object-fit: cover;
         }
 
-        /* Label on the photo */
         .instruction-label {
             position: absolute;
             bottom: 20px;
@@ -105,41 +149,50 @@
             backdrop-filter: blur(5px);
         }
 
-        /* REVEAL ACTION: When clicked or tapped */
-        /* Works on click (Desktop) and touch (Mobile) */
+        /* Reveal */
         .wish-card:focus .photo-overlay,
         .wish-card:active .photo-overlay {
             transform: translateY(-100%);
             opacity: 0;
         }
 
-        /* Floating Animation Keyframes */
         @keyframes float {
             0%, 100% { transform: translateY(0); }
             50% { transform: translateY(-15px); }
         }
-        .audio{
-            display:none;
-           
-        }
     </style>
 </head>
+
 <body>
 
+    <!-- 🌹 Floating Roses -->
+    <div class="roses">
+        <span>🌹</span>
+        <span>🌹</span>
+        <span>🌹</span>
+        <span>🌹</span>
+        <span>🌹</span>
+        <span>🌹</span>
+    </div>
+
+    <!-- Card -->
     <div class="wish-card" tabindex="0">
-        
+
         <div class="wish-content">
             <h2>All the best for your exam! ✍️</h2>
-            <p>I know you have worked hard. You are going to shine today! Call me once you finish. ❤️</p>
+            <p>
+                I know you have worked hard. You are going to shine today!  
+                Call me once you finish. ❤️
+            </p>
         </div>
 
         <div class="photo-overlay">
             <img src="img/photo.jpg" alt="Her Photo">
-            <div class="instruction-label instruction-text">
-            </div>
+            <div class="instruction-label instruction-text"></div>
         </div>
 
     </div>
 
 </body>
 </html>
+
